--- a/body-hf.tex
+++ b/body-hf.tex
@@ -62,7 +62,7 @@ Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särski
 \caption{Scouters JOTA-frekvenser på HF}
 \end{table}
 
-Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de endra frekvenser som scouter använder.
+Normalt aktiveras dessa frekvenser tredje veckoslutet i oktober varje år, fredag till söndag. Då kan det vara många klubbar som finns på frekvenserna och det är också vanligt att man hör dem på helt andra frekvenser. De frekvenser som listas här är inte på något vis de enda frekvenser som scouter använder.
 
 \subsection{Marina MF/HF-frekvenser}
 
