--- a/body.tex
+++ b/body.tex
@@ -339,7 +339,7 @@ Olika modulationer upptar olika bandbredd. Detta är mycket viktigt att förstå
 \caption{Normal bandbredd vid olika modulationsslag}
 \end{table}
 
-*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i under bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605\,kHz i stället.
+*) För SSB gäller att USB och LSB fungerar lite olika. När man beräknar den högsta eller lägsta frekvensen utgår man från den inställda frekvensen $f$. För USB gäller då att högsta frekvensen är $f+3$\,kHz. För LSB blir det $f-3$\,kHz. Detta innebär att om du sänder på 80\,m-bandet och du får sända telefoni från 3600--3800\,kHz och vill lägga dig i undre bandkanten och köra LSB skall du ställa in din radio på 3603\,kHz som lägsta frekvens. Använd gärna lite marginal och kör exempelvis 3605\,kHz i stället.
 
 Den egentliga modulationsfrekvensen är dock lite mer komplicerad. Normalt anges den verkliga modulationsfrekvensen som ca 2,7\,kHz och det beror på att man i regel filtrerar bort ljudet under 300\,Hz och det över 3000\,Hz. Detta innebär att det akustiska frekvensomfånget blir 300--3000\,Hz och därmed upptar signalen inte mer än 2,7\,kHz.
 
@@ -355,7 +355,7 @@ Bandbredden hos CW består av fasbruset vilket normalt är så undertryckt att d
 
 \subsubsection{Amplitudmodulering, AM}
 
-Amplitudmodulering finns i flera olika varianter. Vanlig AM består av en bärvåg vars styra varieras i takt med signalen som skall sändas. Denna förändring av bärvågen producerar sidband och det är i dessa som den egentliga informationen återfinns. Bärvågen i sig får dock lejonparten av signalen varför det är en sändningsklass som nästan aldrig används inom amatörradiobanden.
+Amplitudmodulering finns i flera olika varianter. Vanlig AM består av en bärvåg vars styrka varieras i takt med signalen som skall sändas. Denna förändring av bärvågen producerar sidband och det är i dessa som den egentliga informationen återfinns. Bärvågen i sig får dock lejonparten av signalen varför det är en sändningsklass som nästan aldrig används inom amatörradiobanden.
 
 Bandbredden hos AM-modulerad signal kan beräknas genom att man tar två gånger högsta modulationsfrekvensen. Detta ger t.ex. vid en modulationsfrekvens som går från 300-3000\,Hz en bandbredd som varierar med talet från upp till 6\,kHz.
 
