Fix av antal rapporterade issues

--- a/body.tex
+++ b/body.tex
@@ -271,6 +271,8 @@ Nödtrafik har alltid prioritet.
 
 \input{qso}
 
+\newpage
+
 \section{Teknik}
 
 \subsection{Effekt i dBW och dBm}
@@ -482,6 +484,8 @@ Inom amatörradio används ofta pilottoner (subtoner) som CTCSS\footnote{Contnuo
 
 Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS för att hindra att störningar uppkommer vid conds mm. Det ger också möjligheten för sändaramatörer att öppna just den repeater man önskar om man har flera på samma frekvens omkring sig.
 
+Generellt för dessa är att sista siffran i CTCSS-frekvensen är samma som distriktsiffran.
+
 \begin{table}[H]
 \centering
 \begin{tabular}{lcccc}
@@ -499,7 +503,7 @@ Rekommendationer för repeatrar i olika distrikt och län att använda CTCSS fö
 \caption{Distrikt och CTCSS-toner}
 \end{table}
 
-Lägg märke till att decimalsiffran är i de flesta fall samma som distriktssiffran.
+\newpage
 
 \section{Övergripande frekvensplan}
 
@@ -587,7 +591,7 @@ Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge kr
 
 \subsubsection{Ultrakortvåg, väldigt hög frekvens (VHF)}
 
-Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknar, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
+Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan av terränghinder mm. Särskilt utmärkande för UKV är att rymdvåg saknas, markvågsdämpningen till lands är total och kommunikation på högre frekvenser i princip därför bara sker vid fri sikt mellan sändare och mottagare.
 
 Eftersom signalerna kan passera jonosfären fungerar det att kommunicera med satelliter och rymdstationer på frekvenserna över ca 100\,MHz. Amatörradiobandet på 144--146\,MHz (2-metersbandet) har en avdelning frekvenser vikta för rymdkommunikaton.
 
