Fixade till titeln så rätt variabel används.

--- a/rhb-forord.tex
+++ b/rhb-forord.tex
@@ -6,7 +6,7 @@
 \vspace*{4cm}
 \centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
 \begin{flushright}
-	\Huge{\bfseries{\TitleText} HF/VHF/UHF} \\[3mm]
+	\Huge{\bfseries{\TitleText}} \\[3mm]
 	\Large{\bfseries{\SubtitleText}}
 \end{flushright}
 
