--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -1,3 +1,16 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\TitleText}{Radiohandbok HF/VHF/UHF}
+\newcommand{\SubtitleText}{För Sändaramatörer, privatradioanvändare\\
+	och andra radiointresserade}
+\newcommand{\Forfattare}{Täpp-Anders Sikvall}
+\newcommand{\Initialer}{SM5UEI}
+\newcommand{\DokYear}{19}
+\newcommand{\DokVersion}{2.2.1-dev}
+\newcommand{\DokumentRevision}{x.y.z}
+\newcommand{\DokumentDatum}{\today}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \input{init-1st}
 \input{rhb-forord}
 \input{body}
