Små uppdateringar i byggsystemet.

--- a/init-1st.tex
+++ b/init-1st.tex
@@ -1,3 +1,13 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\SubtitleText}{För Sändaramatörer, privatradioanvändare\\
+	och andra radiointresserade}
+\newcommand{\Forfattare}{Täpp-Anders Sikvall}
+\newcommand{\Initialer}{SM5UEI}
+\newcommand{\DokYear}{19}
+\newcommand{\DokVersion}{2.2.1}
+\newcommand{\DokumentDatum}{\today}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,swedish,a4paper]{article}    % De viktigaste inställningarna för dokumentet
 \usepackage[a4paper,bindingoffset=1cm]{geometry} % Särskilda dokumentinställningar 
 \usepackage[utf8]{inputenc}            % Indata som UTF-8 är väldigt bra för t.ex. svenska
