Uppdaterad ordalydelse, några länkar.

--- a/rhb-forord.tex
+++ b/rhb-forord.tex
@@ -116,7 +116,7 @@ PTS har gjort en del uppdateringar av undantagsföreskriften som kan vara bra at
 
 Vad gäller det senaste så kan man hitta mer information hos Post- och Telestyrelsen (PTS) på deras hemsida\footnote{\href{https://pts.se/radio/radiotillstand/undantag-fran-tillstandsplikt/}{https://pts.se/radio/radiotillstand/undantag-fran-tillstandsplikt/}} där det är den senaste versionen som gäller.
 
-I skriften finns oerhört många radiofunktioner listade som inte är intressanta för oss men här står också vad som gäller i form av effekter och hur de olika banden eller kanalerna får nyttjas, i vilka sammanhang och ibland också till vilken grad. 
+I föreskriften finns oerhört många radiofunktioner listade som inte är intressanta för oss men här står också vad som gäller i form av effekter och hur de olika banden eller kanalerna får nyttjas, i vilka sammanhang och ibland också till vilken grad. 
 
 Det är en god idé att sätta sig in i detta och titta igenom detta ordentligt. Det kommer uppdateringar med jämna mellanrum och detta innebär också att det lönar sig att titta in då och då på PTS hemsida för att se vad som sker.
 
