Lade till en sida om radioberäkningar i VHF-kapitlet med radiohorisont och sträckdämpning.

--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -481,6 +481,8 @@ Sändningarna skall dock alltid ske under direkt överinseende av en radioamatö
 men var beredd på att det kommer vara en viss ovana och ske en del misstag. 
 Strunta i det och ge scouterna en kul radioupplevelse.
 
+\input{radioberakningar-vhf.tex}
+
 \input{repeatrar-vhf.tex}
 
 \input{bandplan-vhfuhf}
