--- a/init-1st.tex
+++ b/init-1st.tex
@@ -5,7 +5,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SM5UEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.3.0-dev}
+\newcommand{\DokVersion}{2.2.2}
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,swedish,a4paper]{article}    % De viktigaste inställningarna för dokumentet
