Lade till karta över SM-distrikt enligt issue #28

--- a/body.tex
+++ b/body.tex
@@ -109,6 +109,17 @@ Det unika för en radioamatörs signal är alltså prefixet + suffixet,
 som exempel är identifieraren för SM0UEI prefixet SM och suffixet UEI
 eftersom distriktsiffran kan ändra sig. 
 
+\clearpage
+
+\subsubsection{Karta över svenska amatörradiodistrikt}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{bilder/sm-distrikt-stor}
+	\label{fig:sm-distrikt}
+	\caption{Karta över SM-distrikt (från SSA:s webplats)}
+\end{figure}
+
 \section{Terminologi och trafik}
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
