--- a/init-1st.tex
+++ b/init-1st.tex
@@ -1,11 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\SubtitleText}{För Sändaramatörer, privatradioanvändare\\
 	och andra radiointresserade}
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SM5UEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.3.0-dev}
+\newcommand{\DokVersion}{2.2.3} % Glöm inte fixa versionen här!
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[10pt,swedish,a4paper]{article}    % De viktigaste inställningarna för dokumentet
