Tillförde lite mer beskrivning om trafiksätt på kortvåg, påbörjat beskrivning av olika band.

--- a/egenskaper-hf.tex
+++ b/egenskaper-hf.tex
@@ -1,3 +1,5 @@
+\clearpage
+
 \subsection{Olika trafiksätt på HF}
 
 De olika HF-banden har olika egenskaper över tid på dagen, tid på året och påverkas vädligt mycket av rådande rymdväder och hur joniserat den övre delen av atmosfären är för att bilda rymdvåg.
@@ -32,6 +34,12 @@ Denna frekvens kallas för MUF (maximum useable frequency) och betyder i praktik
 
 På olika ställen runt jorden mäts MUF genom så kallade ''jonosonder'' som innebär att man skickar en svept signal, ofta från ca 2~MHz till ungefär 40~MHz och sedan lyssnar man på olika mottagarstationer vad som kommer tillbaka och hur starkt det är. På amatörradions mottagare kan man ibland höra ett sådant svep och då är det reflexten av jonosonden som man hör.
 
+\subsubsection{Generellt om kortvågbandens rymdvåg}
+
+Lägre frekvenser reflekteras oftast på lägre nivå i jonosfären, de tränger inte lika högt upp i de olika reflekterande lagren innan de reflekteras. På samma sätt reflekteras i regel högre frekvenser högre upp. Detta gör att givet en viss vinkel så kommer den reflekterade rymdvågen ner på olika ställen, olika långt bort från sändaren, beroende på frekvensen. 
+
+För att komma så långt som möjligt bör man välja ett band som är så nära MUF som möjligt och ha en relativt flack vinkel från sin antenn. För att uppnå NVIS skickar man signalen med en brant vinkel, nästan vertikalt uppåt, och den kommer då tillbaka ganska rakt uppifrån.
+
 \subsubsection{NVIS}
 
 Ett särskilt sätt att sända kortvåg är att skicka signalen nästan rakt uppåt. Sättet kallas på engelska för ''Near Vertical Incidence Skywave'' och kan översättas ungefär som ''nästan vertikalt vinklad rymdvåg'' och innebär att man placerar en kortvågsantenn relativt lågt, ibland bara några meter över mark. Man får då en våg som riktas i det närmaste rakt uppåt då marken agerar som en mycket nära reflektor.
@@ -42,8 +50,30 @@ Lämpliga band för NVIS är band mellan 2--8 MHz så för oss radioamatörer bl
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.7\textwidth]{bilder/NVIS-Propagation}
+	\includegraphics[width=0.6\textwidth]{bilder/NVIS-Propagation}
 	\label{fig:nvis-propagation}
 	\caption{NVIS-utbredning, princip}
 \end{figure}
+
+NVIS används mycket på t.ex. 80-metersbandet för olika ''ringar'' och liknande när man träffas flera sändaramatörer på en viss frekvens en viss tid och sedan turas om att sända och kommentera på olika saker. 
+
+\subsubsection{DX -- långväga kontakter}
+
+För mer långväga kontakter lägger vi oss så högt det går, har antenner som sänder i en flackare vinkel, nästan rakt mot horisonten på lite högre höjd om möjligt och gärna också riktantenner i stället för de vanliga dipolerna som är den vanligaste antennen för de lägre kortvågsbanden.
+
+Genom att kombinera detta och reflektera så högt upp i jonosfären som möjligt kan vi ibland nå mycket långt. Är konditionerna goda kan man få flera sådana hopp (skip) efter varandra och på så vis kan vi nå till andra sidan planeten. Vid gynnsamma konditioner kan man med relativt enkla medel prata med Japan och Australien på kortvåg.
+
+\subsection{Bandens olika egenskaper}
+
+\todo{Beskriva}
+
+\subsubsection{160--80 meter}
+\todo{Beskriva}
+
+
+\subsubsection{40-60 meter}
+\todo{Beskriva}
+
+\subsubsection{20, 17, 12 och 10 meter}
+\todo{Beskriva}
 
