Lade tillfälligt undan referenser till kartmtrl innan det är säkerställt det kan användas i projektet.

--- a/body.tex
+++ b/body.tex
@@ -113,12 +113,12 @@ eftersom distriktsiffran kan ändra sig.
 
 \subsubsection{Karta över svenska amatörradiodistrikt}
 
-\begin{figure}[h]
-	\centering
-	\includegraphics{bilder/sm-distrikt-stor}
-	\label{fig:sm-distrikt}
-	\caption{Karta över SM-distrikt (från SSA:s webplats)}
-\end{figure}
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics{bilder/sm-distrikt-stor}
+%	\label{fig:sm-distrikt}
+%	\caption{Karta över SM-distrikt (från SSA:s webplats)}
+%\end{figure}
 
 \section{Terminologi och trafik}
 
