--- a/egenskaper-hf.tex
+++ b/egenskaper-hf.tex
@@ -48,12 +48,12 @@ Denna typ av rymdvåg träffar då de joniserade delarna av atmosfären och refl
 
 Lämpliga band för NVIS är band mellan 2--8 MHz så för oss radioamatörer blir det då 160-, 80-, 40-metersbanden främst, men även 60-metersbandet kan nyttjas för NVIS.
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.6\textwidth]{bilder/NVIS-Propagation}
-	\label{fig:nvis-propagation}
-	\caption{NVIS-utbredning, princip}
-\end{figure}
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[width=0.6\textwidth]{bilder/NVIS-Propagation}
+%	\label{fig:nvis-propagation}
+%	\caption{NVIS-utbredning, princip}
+%\end{figure}
 
 NVIS används mycket på t.ex. 80-metersbandet för olika ''ringar'' och liknande när man träffas flera sändaramatörer på en viss frekvens en viss tid och sedan turas om att sända och kommentera på olika saker. 
 
