Flyttade ner underfilerna till egen katalog och uppdaterade referenserna.

--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -3,11 +3,12 @@
 \newcommand{\TitleText}{Radiohandbok HF/VHF/UHF}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{init-1st}
-\input{rhb-forord}
-\input{body}
-\input{body-vhf}
-\input{body-hf}
+\input{tex/init-1st}
+\input{tex/rhb-forord}
+\input{tex/body}
+\input{tex/body-vhf}
+\input{tex/body-hf}
+
 %\input{logbook}
 
 \end{document}
