--- a/rhb-hf.tex
+++ b/rhb-hf.tex
@@ -3,10 +3,10 @@
 \newcommand{\TitleText}{Radiohandbok HF}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{init-1st}
-\input{rhb-forord}
-\input{body}
-\input{body-hf}
+\input{tex/init-1st}
+\input{tex/rhb-forord}
+\input{tex/body}
+\input{tex/body-hf}
 %\input{logbook}
 
 \end{document}
