--- a/rhb-vhf.tex
+++ b/rhb-vhf.tex
@@ -3,9 +3,9 @@
 \newcommand{\TitleText}{Radiohandbok VHF/UHF}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{init-1st}
-\input{rhb-forord}
-\input{body}
-\input{body-vhf}
+\input{tex/init-1st}
+\input{tex/rhb-forord}
+\input{tex/body}
+\input{tex/body-vhf}
 %\input{logbook}
 \end{document}
