--- a/tex/body-hf.tex
+++ b/tex/body-hf.tex
@@ -29,7 +29,7 @@ OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast samma
 
 \section{Frekvenser HF}
 
-\input{pr-bandet-27mhz.tex}
+\input{tex/pr-bandet-27mhz.tex}
 
 \subsection{JOTA---Jamboree on the air, scoutfrekvenser}
 
@@ -153,6 +153,6 @@ YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
 
 \normalsize
 
-\input{egenskaper-hf}
+\input{tex/egenskaper-hf}
 
-\input{bandplan-hf}
+\input{tex/bandplan-hf}
