--- a/tex/body-vhf.tex
+++ b/tex/body-vhf.tex
@@ -46,7 +46,7 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 	           31,170 & Jakt 31*           &                   &   31,370          &                    &
 \end{longtable}
 
-\input{pr-bandet-69mhz}
+\input{tex/pr-bandet-69mhz}
 
 
 \subsubsection{Jakt och jordbruksfrekvenser 155\,MHz}
@@ -499,8 +499,8 @@ Sändningarna skall dock alltid ske under direkt överinseende av en radioamatö
 men var beredd på att det kommer vara en viss ovana och ske en del misstag. 
 Strunta i det och ge scouterna en kul radioupplevelse.
 
-\input{radioberakningar-vhf.tex}
+\input{tex/radioberakningar-vhf.tex}
 
-\input{repeatrar-vhf.tex}
+\input{tex/repeatrar-vhf.tex}
 
-\input{bandplan-vhfuhf}
+\input{tex/bandplan-vhfuhf}
