--- a/tex/body.tex
+++ b/tex/body.tex
@@ -282,7 +282,7 @@ Repeatern är en begränsad resurs. Det är inte okay att lägga beslag på den 
 
 Nödtrafik har alltid prioritet.
 
-\input{qso}
+\input{tex/qso}
 
 \newpage
 
