Lade till README för bilder för hantera rättigheterna kring dessa. Lade till bild från SSA över svenska amatörradiodistrikten.

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -92,6 +92,15 @@ Sverige delas in i följande distrikt efter sina län:
 \caption{Distriktssiffor i Sverige}
 \end{table}
 
+\subsubsection{Karta över svenska amatörradiodistrikt}
+
+\begin{wrapfigure}{R}{15cm}
+	\centering
+	\includegraphics[width=15cm]{pic/sm-distrikt-stor}
+	\label{fig:sm-distrikt}
+	\caption{Svenska distrikt, karta med tillståpnd från \href{https://SSA.SE}{ssa.se}}
+\end{wrapfigure}
+
 Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer 
 byter inte distriktsiffra under resa i annat distrikt, i stället används 
 suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger 
@@ -111,14 +120,6 @@ eftersom distriktsiffran kan ändra sig.
 
 \clearpage
 
-\subsubsection{Karta över svenska amatörradiodistrikt}
-
-%\begin{figure}[h]
-%	\centering
-%	\includegraphics{bilder/sm-distrikt-stor}
-%	\label{fig:sm-distrikt}
-%	\caption{Karta över SM-distrikt (från SSA:s webplats)}
-%\end{figure}
 
 \section{Terminologi och trafik}
 
