Uppdaterade frekvenstabeller Lade till IEEE-tabeller

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -587,6 +587,71 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 \caption{ITU-benämningar på radarband mm}
 \end{table}
 
+\subsection{IEEE-benämningar på frekvensband}
+
+\subsubsection{Äldre benämmomgar}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{lr}
+		\textbf{Band} & \textbf{Frekvens} \\ \hline
+		A             &        0--250 MHz \\
+		B             &      250--500 MHz \\
+		C             &     100--1000 MHz \\
+		D             &          1--2 GHz \\
+		E             &          2--3 GHz \\
+		F             &          3--4 GHz \\
+		G             &          4--6 GHz \\
+		H             &          6--8 GHz \\
+		I             &         8--10 GHz \\
+		J             &        10--20 GHz \\
+		K             &        20--45 GHz \\
+		L             &        40--60 GHz \\
+		M             &       60--100 GHz \\
+		N             &      100--200 GHz \\
+		O             &      100--200 GJz
+	\end{tabular}
+	\caption{Äldre IEEE-benämningar på frekvensband}
+\end{table}
+
+\subsubsection{Nuvarande benämningar}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{lr}
+		\textbf{Band} & \textbf{Frekvens} \\ \hline
+		I             &      100--150 MHz \\
+		G             &      250--500 MHz \\
+		P             &      225--390 MHz \\
+		L             &     390--1550 MHz \\
+		S             &    1550--3900 MHz \\
+		C             &    3900--6200 MHz \\
+		X             &   6200--10900 MHz \\
+		Ku            &    10,9--20,0 GHz \\
+		Ka            &        20--36 GHz \\
+		Q             &        36--46 GHz \\
+		V             &         46-56 GHz \\
+		W             &       56--100 GHz
+	\end{tabular}
+	\caption{Nyare IEEE-benämningar på frekvensband}
+\end{table}
+
+\subsubsection{Rundradioband}
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{lrl}
+		\textbf{Band} & \textbf{Frekvens} &                                                 \\ \hline
+		Band I        &        47--68 MHz & Tidigare TV-band också ''6-metersbandet''       \\
+		Band II       &   87,5--108,0 MHz & Nuvarande FM-rundradionbandet                   \\
+		Band III      &      174--230 MHz & Används i dag för DAB                           \\
+		Band IV       &      470--582 MHz & I dag refarmerat till främst landmobil komradio \\
+		Band V        &      582--862 MHz & Marksänd TV
+	\end{tabular}
+	\caption{IEEE-benämningar på rundradioband}
+\end{table}
+
+
 \subsection{Egenskaper olika frekvensband}
 
 För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvåg, VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt \ref{frekvens-vaglangd}. Dessa har lite olika utbredningsegenskaper.
