Påbörjat info om instegscertifikat. Inte klart ännu, behöver mer info.

--- a/tex/body.tex
+++ b/tex/body.tex
@@ -1,3 +1,5 @@
+\input{tex/amatorradiocertifikat}
+
 \section{Signaler och anrop}
 \subsection{Landsprefix}
 
@@ -588,6 +590,7 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 \end{table}
 
 \subsection{IEEE-benämningar på frekvensband}
+\label{sec:IEEE-benamningar}
 
 \subsubsection{Äldre benämmomgar}
 
