Justerade information om 69 MHz bandet

--- a/tex/pr-bandet-69mhz.tex
+++ b/tex/pr-bandet-69mhz.tex
@@ -1,20 +1,35 @@
-\subsubsection{PR-bandet 69 MHz}
+\subsubsection{Åkeribandet 69 MHz öppet för PMR}
 
-Sedan några år tillbaka finns nu ett nytt band som kan användas för
-privatradio (PR). Bandet kallas allmänt för 69\,MHz-bandet och har
-blivit mycket populärt på sina ställen.
+Sedan några år tillbaka finns nu ett nytt band som kan användas för privat
+landmobil radio (PMR). Bandet kallas allmänt för 69\,MHz-bandet och har blivit
+mycket populärt på sina ställen.
 
-Anledningen är bland annat en stor tillgång på FM-radio för bandet
-från gamla åkeriradio som säljs för billiga pengar på diverse
-begagnatsajter och som därmed gör det enkelt att komma igång.
+Anledningen är bland annat en stor tillgång på FM-radio för bandet från gamla
+åkeriradio som säljs för billiga pengar på diverse begagnatsajter och som
+därmed gör det enkelt att komma igång.
 
-Antennstorlekarna är moderata och det är ett ypperligt band för mobilradio där våglängden är ungefär den dubbla mot 2-metersbandet och fungerar bra i många sammanhang.
+Antennstorlekarna är moderata och det är ett ypperligt band för mobilradio där
+våglängden är ungefär den dubbla mot 2-metersbandet och fungerar bra i många
+sammanhang.
 
-Nackdelen som den delar med 27\,MHz är att många antenner för fordon är förkortade vilket minskar verkningsgraden på dessa en del men trots detta fungerar det bra. Antennerna är dock betydligt mindre skrymmande än de för 27\,MHz.
+Nackdelen som den delar med 27\,MHz är att många antenner för fordon är
+förkortade vilket minskar verkningsgraden på dessa en del men trots detta
+fungerar det bra. Antennerna är dock betydligt mindre skrymmande än de för
+27\,MHz.
 
-På bandet kör man FM uteslutande och det rekommenderas att man skaffar en radio med signalstyrkemätare då man på FM inte kan höra lika väl om man är störd, däremot syns det ju på S-metern om man har störningar. Bandet lider något av störningar i urbana miljöer men på landsbygden brukar det vara tyst och fint.
+På bandet kör man FM uteslutande och det rekommenderas att man skaffar en
+radio med signalstyrkemätare då man på FM inte kan höra lika väl om man är
+störd, däremot syns det ju på S-metern om man har störningar. Bandet lider
+något av störningar i urbana miljöer men på landsbygden brukar det vara tyst
+och fint.
 
-Användningen av bandet regleras i PTS föreskrift Undantag från Tillståndsplikt och innebär att man får använda max 25\,W ERP (dvs för en dipolantenn), max 10\% sändningscykel (dvs 6 min/timme), en kanalbredd om 25\,kHz och det finns 8 stycken kanaler upplåtna för landmobil radio. I strikt mening är inte kommunikation bas-bas egentligen tillåten eftersom det är landmobil trafik som avses i PTS bestämmelser. Kanal 1 får enbart användas för mobil-mobil trafik inom Västra Götaland och Hallands län.
+Användningen av bandet regleras i PTS föreskrift Undantag från Tillståndsplikt
+och innebär att man får använda max 25\,W ERP (dvs för en dipolantenn), max
+10\% sändningscykel (dvs 6 min/timme), en kanalbredd om 25\,kHz och det finns
+8 stycken kanaler upplåtna för landmobil radio. I strikt mening är inte
+kommunikation bas-bas egentligen tillåten eftersom det är landmobil trafik som
+avses i PTS bestämmelser. Kanal 1 får enbart användas för mobil-mobil trafik
+inom Västra Götaland och Hallands län.
 
 \begin{table}[h]
   \centering
