Fixa till struktur.

--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -5,6 +5,8 @@
 
 \input{tex/init-1st}
 \input{tex/rhb-forord}
+\input{tex/undantagsreglementet}
+\input{tex/amatorradiocertifikat}
 \input{tex/body}
 \input{tex/body-vhf}
 \input{tex/body-hf}
