--- a/rhb-hf.tex
+++ b/rhb-hf.tex
@@ -5,8 +5,9 @@
 
 \input{tex/init-1st}
 \input{tex/rhb-forord}
+\input{tex/undantagsreglementet}
+\input{tex/amatorradiocertifikat}
 \input{tex/body}
 \input{tex/body-hf}
-%\input{logbook}
 
 \end{document}
