--- a/tex/body.tex
+++ b/tex/body.tex
@@ -96,12 +96,12 @@ Sverige delas in i följande distrikt efter sina län:
 
 \subsubsection{Karta över svenska amatörradiodistrikt}
 
-\begin{wrapfigure}{R}{15cm}
+\begin{figure}
 	\centering
 	\includegraphics[width=15cm]{pic/sm-distrikt-stor}
 	\label{fig:sm-distrikt}
 	\caption{Svenska distrikt, karta med tillståpnd från \href{https://SSA.SE}{ssa.se}}
-\end{wrapfigure}
+\end{figure}
 
 Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer 
 byter inte distriktsiffra under resa i annat distrikt, i stället används 
